--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Email: vaas20123@gmail.com</p>
     <p>Biografia: <strong>Se quiser sim mano.</strong></p>
     <button><a href="https://maps.app.goo.gl/EnpZvFQavDJBbJhc6" target="_blank">Localização</a></button>
-    <p>Sobre mim: Nasci em 1984 nas ilhas Rook e desde novo era um Rakyat nativo. E qualquer um que arranje encrenca comigo se lasca. Ao meu ver me tornei uma decepção para minha irmã.</p>
+    <p>Sobre mim: Nasci em 1984 nas ilhas Rook e desde novo era um Rakyat nativo. <br> E qualquer um que arranje encrenca comigo se lasca. Ao meu ver me tornei uma decepção para minha irmã.</p>
    
 </section>
 
